# Coral.cmake

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
Coral.Native/: CMakeLists.txt  xmake.lua
Coral.Native/Include/Coral/: Core.hpp
Coral.Native/Source/Coral/: HostInstance.cpp
Example/Example.Native/: CMakeLists.txt  xmake.lua
Prebuilt/Windows/x86/: Example.Managed.deps.json  Testing.Managed.deps.json
Prebuilt/debug/: Example.Managed.deps.json  Testing.Managed.deps.json
Prebuilt/linux/x64/: Example.Managed.deps.json  Testing.Managed.deps.json
Prebuilt/macOS/arm64/: Testing.Managed.deps.json
Prebuilt/macOS/x86_64/: Example.Managed.deps.json
Prebuilt/macosx/arm64/: Example.Managed.deps.json
Prebuilt/macosx/x64/: Testing.Managed.deps.json
Prebuilt/windows/x64/: Example.Managed.deps.json  Testing.Managed.deps.json
Tests/Testing.Native/: CMakeLists.txt  xmake.lua
